Fix: Added overflow-x hidden to new home sections

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3756,6 +3756,8 @@ button.wishlistBtn {
 
 .internationalSection,
 .domesticSection,
+.intlDomesticSection,
+.keralaTourSection,
 .firstMinuteOfferSection {
 
     .homeContainer {
